<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyMeal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="loading">Loading</string>
    <string name="title_meals_by_category">Meals for %1$s</string>
    <string name="title_meals_by_ingredient">Meals for %1$s</string>
    <string name="meal_thumbnail_description">Thumbnail for recipe</string>
    <string name="confirm_add_meal">Do you want to add this to your saved meals?</string>
    <string name="confirm_remove_meal">Do you want to remove this from your saved meals?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="meal_saved">Meal saved!</string>

    <string name="menu_random_meal">Random meal</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_meals_by_category">Meals</string>
    <string name="menu_ingredients">Ingredients</string>
    <string name="menu_meals_by_ingredient">Meals</string>
    <string name="menu_my_meals">My meals</string>

    <string name="error_network">No internet connection</string>
    <string name="error_no_meals">No meals!</string>
</resources>